--- a/css/workspages.css
+++ b/css/workspages.css
@@ -104,6 +104,7 @@ body {
 }
 
 .title {
+    width: 80%;
     text-align: center;
     font-family: "june-expt-variable", sans-serif;
     font-variation-settings: "STYL" 100;
