--- a/styles/projets.css
+++ b/styles/projets.css
@@ -34,34 +34,34 @@ padding: 2vw 4vh;
 }
 
 nav ul {
-list-style: none;
-display: flex;
-padding: 0;
-margin: 0;
-border: 1px solid #555;
-border-radius: 20vw;
-padding: 1vh 1.8vw;
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #c9c9c9;
+  border-radius: 25px;
+  padding: 10px 20px;
 }
 
 nav ul li {
-margin: 0 10px;
-font-size: 12px;
+  margin: 0 10px;
+  font-size: 12px;
 }
 
 nav ul li a {
-text-decoration: none;
-color: #777;
-transition: color 0.3s;
+  text-decoration: none;
+  color: #c9c9c9;
+  transition: color 0.3s;
 }
 
 nav ul li.active a {
-color: #fff;
-font-weight: bold;
-text-decoration: underline;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 nav ul li a:hover {
-color: #ddd;
+  color: #ddd;
 }
 
 .container img {
