--- a/styles/load.css
+++ b/styles/load.css
@@ -12,14 +12,14 @@
 
 .column {
     width: 5vw;
-    height: 100vh; /* Assure que chaque colonne prend toute la hauteur */
+    height: 100vh; 
     display: flex;
     flex-direction: column;
 }
 
 .block {
     width: 100%;
-    height: 5vh; /* Utilisation de vh pour couvrir 100% */
+    height: 5vh; 
     background-color: #ffffff;
     opacity: 0;
 }
