--- a/styles/pageprojet.css
+++ b/styles/pageprojet.css
@@ -725,6 +725,7 @@ section {
     position: relative;
     width: 1000vh;
     gap: 1.5vh;
+    height: 80vh;
     overflow: hidden;
   }
 
@@ -748,6 +749,11 @@ section {
   .text-bottom {
     padding-bottom: 0vw;
     font-size: 2.7vw;
+  }
+
+  .footer {
+    padding-bottom: 10vh;
+    height: 10vh;
   }
 }
 
